--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="/logo192.png">
     <link rel="manifest" href="/manifest.json">
     <script src = "https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -23,6 +24,7 @@
                     <img src="./Final Project/Treact Logo.svg" class="logo" alt="">
                     Treact
                 </div>
+                
                 <ul class="nav__links--list">
                     <li>
                         <a href="" class="
@@ -67,7 +69,30 @@
                     ">Sign up</a>
                     </li>
                 </ul>
+            
+            <button class="btn__menu" onclick="OpenMenu()">
+                 <i class="fas fa-bars"></i>
+            </button>
+            <div class="menu__backdrop">
+                <button class="btn__menu btn__menu--close" onclick = "CloseMenu()">
+                    <i class="fas fa-times"></i>
+                </button>
+                <ul class="menu__links">
+                    <li class="menu__list"><a href="#" class="menu__link">About</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link">Blog</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link">Pricing</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link">Contact Us</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link">Login</a>
+                    </li>
+                    <li class="menu__list"><a href="#" class="menu__link nav__link--anchor--primary">Sign up</a>
+                    </li>
+                </ul>
             </div>
+        </div>
         </nav>
         <div>
             <div class="two__column">
